change app height to try to prevent the send bar being obscured by navigation controls on iPhone

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,6 +1,6 @@
 .app {
     display: flex;
-    height: 100vh;
+    height: -webkit-fill-available;
     flex-direction: column;
     flex-wrap: nowrap;
     background-color: lightyellow;
